writing unit  tests for curing controller using mockMVC